2004-11-30  Lluis Sanchez Gual  <lluis@novell.com>

	* XmlCodeExporter.cs, XmlSerializer.cs, XmlSchemaImporter.cs: Fixed some
	compilation warnings.

2004-11-24  Lluis Sanchez Gual  <lluis@novell.com>

	* SerializationSource.cs: Made SerializationSource abstract, and
	renamed Equals to BaseEquals to avoid missing GetHashCode warning
	(it does not really make sense in this case).
	* XmlSchemaExporter.cs, SerializationCodeGenerator.cs,
	XmlReflectionImporter.cs, XmlSerializationWriterInterpreter.cs,
	XmlSerializationReader.cs: Fixed warnings.

2004-10-19  Atsushi Enomoto  <atsushi@ximian.com>

	* XmlSerializationWriter.cs : When namespace is an empty string,
	  XmlTextWriter.LookupPrefix() will raise an error. Just skip it in
	  such case.

2004-10-01  Lluis Sanchez Gual  <lluis@novell.com>

	* MapCodeGenerator.cs: When the Object type is exported, export all
	  derived maps. This was done in IncludeMetadata, but this method is
	  not called by the xsd tool.
	* XmlCodeExporter.cs: In AddMappingMetadata, only generate the root
	  attribute for primitive types and arrays.
	* XmlSchemaImporter.cs: Only export all object-derived maps if the
	  Object type is explicitly referenced by an element.
	* XmlSerializationWriter.cs: Minor fix.

2004-09-28  Lluis Sanchez Gual  <lluis@novell.com>

	* CodeIdentifier.cs: MakeValid now returns "Item" for an empty string.
	  This fixes bug #66877.

2004-09-21  Lluis Sanchez Gual  <lluis@novell.com>

	* SerializationCodeGenerator.cs, XmlSerializationReaderInterpreter.cs:
	  when reading a primitive value in encoded format using
	  ReadReferencingElement, provide the type name and namespace
	  since the xsi type may not be present in the xml element. This
	  fixes bug #65929.

2004-09-15  Lluis Sanchez Gual  <lluis@novell.com>

	* MapCodeGenerator.cs: Moved generation of XmlInclude attributes from
	  ExportDerivedTypes to the new ExportDerivedTypeAttributes method.
	* XmlReflectionImporter.cs: In ImportClassMapping, moved the call to